# serialplot

./: .gitignore  .hgtags  CMakeLists.txt  Dockerfile  Dockerfile_mxe  README.md  WANYUN.txt  about_dialog.ui  commandedit.cpp  commandedit.h  commandpanel.cpp  commandpanel.h  commandwidget.cpp  commandwidget.h  commandwidget.ui  customcheckablebutton.cpp  customcheckablebutton.h  dataformatpanel.cpp  dataformatpanel.h  dataformatpanel.ui  floatswap.h  framebuffer.cpp  framebuffer.h  hidabletabwidget.cpp  hidabletabwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plot.cpp  plot.h  plotsnapshotoverlay.cpp  plotsnapshotoverlay.h  portcontrol.cpp  portcontrol.h  portcontrol.ui  portlist.cpp  portlist.h  scalepicker.cpp  scalepicker.h  (+16 more)
.github/workflows/: serialplot-release.yaml
cmake/modules/: BuildLedWidget.cmake  BuildLinuxAppImage.cmake  BuildQColorWidgets.cmake  BuildQwt.cmake  FindLedWidget.cmake  FindQtColorWidgets.cmake  FindQwt.cmake  GetVersion.cmake  qt_5_2_moc_creation_namespace_fix.diff
debian/: copyright  postinst  postrm  postrm.in
misc/: icons.qrc  program_name.desktop.in  pseudo_device.py  pseudo_device_2.py  serialplot.desktop  topty.py  windows_icon.rc  winicons.qrc
misc/tango/: index.theme  license_notice
qmake/: version.h
src/: about_dialog.ui  abstractreader.cpp  abstractreader.h  asciireader.cpp  asciireader.h  asciireadersettings.cpp  asciireadersettings.h  asciireadersettings.ui  barchart.cpp  barchart.h  barplot.cpp  barplot.h  barscaledraw.cpp  barscaledraw.h  binarystreamreader.cpp  binarystreamreader.h  binarystreamreadersettings.cpp  binarystreamreadersettings.h  binarystreamreadersettings.ui  bpslabel.cpp  bpslabel.h  byteswap.h  channelinfomodel.cpp  channelinfomodel.h  channelmanager.cpp  channelmanager.h  chunkedbuffer.cpp  chunkedbuffer.h  commandedit.cpp  commandedit.h  commandpanel.cpp  commandpanel.h  commandpanel.ui  commandwidget.cpp  commandwidget.h  commandwidget.ui  datachunk.cpp  datachunk.h  dataformatpanel.cpp  dataformatpanel.h  (+105 more)
tests/: CMakeLists.txt  catch.hpp  test.cpp  test_helpers.h  test_readers.cpp  test_recorder.cpp  test_stream.cpp
